# stargaze-floor-bot

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  lint.sh  pyproject.toml
.github/workflows/: test.yaml
cache/: sg721_collections.csv
deployments/: akash.yaml
stargazefloorbot/: __main__.py  floor_client.py  floor_flow.py  stargaze.py
stargazefloorbot/config/: bot_config.py  channel_config.py  collection_config.py  config.py  config_manager.py
tests/: test_floor_client.py
tests/assets/configs/: min_config.yaml  test_config.yaml
tests/config/: test_config.py  test_config_manager.py
